<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button 
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonToast1"
        android:background="@drawable/liverbird"
        android:onClick="liverOnClick"/>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@drawable/liverbird"
        android:layout_marginTop="90dp"
        android:textStyle="bold"
        android:text="@string/lfc"
        android:textColor="#d3171e"
        android:textSize="20sp" />
    
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonToast2"
        android:background="@drawable/arsenal_fc"
        android:onClick="arsOnClick"/>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@drawable/liverbird"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:text="@string/arsenal"
        android:textColor="#d3171e"
        android:textSize="20sp" />
    
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonToast3"
        android:background="@drawable/chelsea_fc"
        android:onClick="chelOnClick"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@drawable/arsenal_fc"
        android:layout_marginTop="310dp"
        android:textStyle="bold"
        android:text="@string/chelsea"
        android:textColor="#0e1e7d"
        android:textSize="20sp" />
</RelativeLayout>
</ScrollView>